sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sonarr
  annotations:
    reloader.stakater.com/auto: 'true'
    secret.reloader.stakater.com/reload: iscsi-chap-secret

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        ports:
        - containerPort: 8989
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /tv
          name: tv
        - mountPath: /downloads
          name: downloads
        - mountPath: /shared
          name: shared
      volumes:
      - name: config
        iscsi:
          targetPortal: 172.19.74.139
          iqn: iqn.2000-01.com.synology:fs2.sonar-config.11cf152a97
          lun: 1
          fsType: ext4
          chapAuthDiscovery: false
          chapAuthSession: true
          secretRef:
            name: iscsi-chap-secret
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/video/tv
        name: tv
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads
        name: downloads
      - nfs:
          server: fs2.oneill.net
          path: /volume2/shared
        name: shared
