sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  ports:
  - port: 8989
    targetPort: 8989
    protocol: TCP
    name: http
  selector:
    app: sonarr
